# airflow-basic-hook

./: Makefile  README.md  docker-compose.yaml  pyproject.toml
dags/: sample_001.py
plugins/sbf/cliente/operators/: zendesk.py
plugins/sbf/cliente/sensors/: zendesk.py
