[tool.poetry]
name = "airflow-basic-hook"
version = "0.1.0"
description = ""
authors = ["Rodrigo Coelho <rodrigo.coelho@hotmail.com.br>"]
readme = "README.md"
packages = [{include = "airflow_basic_hook"}]

[tool.poetry.dependencies]
python = "^3.10"
apache-airflow = "^2.5.3"
black = "^23.3.0"
isort = "^5.12.0"
autoflake = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
